fix text wrap behavior in nav bar

--- a/cookbook/style.css
+++ b/cookbook/style.css
@@ -197,6 +197,11 @@ a:hover {
   border-bottom: 1px solid rgba(160, 73, 0, 0.2);
 }
 
+.site-nav .nav-item {
+  display: inline-block;
+  white-space: nowrap;
+}
+
 .site-nav a {
   text-decoration: none;
   font-weight: 500;
